grunt build added with jslint

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Alejandro Planos">
 		
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="js/angular-flex-picklist/angular-flex-picklist.css">
+		<link rel="stylesheet" href="js/angular-flex-picklist/angular-flex-picklist.min.css">
 		
 		<style>
 			body {
@@ -29,8 +29,8 @@
 		</div>
 	</body>
 	
-	<script src="js/angular/angular.min.js"></script>
+	<script src="js/angular/angular.js"></script>
 	<script src="js/ng-simplePagination/simplePagination.js"></script>
-	<script src="js/angular-flex-picklist/angular-flex-picklist.js"></script>
+	<script src="js/angular-flex-picklist/angular-flex-picklist.min.js"></script>
 	<script src="js/app.js"></script>
 </html>
